# SecondBrain

./: .gitignore  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
dist-electron/: main.js  main.js.map  preload.js  preload.js.map
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs
src/main/: db.ts  index.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.css  index.html
src/renderer/components/: Layout.tsx  MasonryGrid.tsx  NoteCard.tsx  QuickInput.tsx  Sidebar.tsx
src/renderer/lib/: api.ts  themes.ts  types.ts
src/renderer/pages/: BrainPage.tsx  DirectoryDetailPage.tsx  DirectoryPage.tsx  HomePage.tsx  NoteDetailPage.tsx  SearchPage.tsx  SettingsPage.tsx  TasksPage.tsx
